added MAVEN_OPTS to docker build